# python-module-example

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  pytest.ini  requirements.txt
src/simpleexample/: basic.py
tests/: test_basic.py
